[package]
name = "toml"
version = "0.1.0"
authors = ["tahuy <anhhuy0701@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
structopt = "0.3.21"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"